update page défaut

--- a/src/assets/medias/index.html
+++ b/src/assets/medias/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
@@ -97,7 +98,122 @@
                 C'est parti
             </a>
         </div>
+    </div><!-- Section CTA -->
+    <div class="max-w-screen-lg mx-auto mt-36 text-center">
+        <h3 class="lg:text-3xl">Les aventures les plus populaire</h3>
+    </div>
+    <div class="my-20 flex max-w-screen-xl justify-around mx-auto">
+        <div class="relative">
+            <div
+                class="absolute w-full h-full rounded-lg text-bottom bg-gradient-to-b from-transparent from-60% to-neutral-900">
+                <div class="grid w-full h-full rounded-lg content-between p-2">
+                    <button
+                        class="place-self-end rounded-full w-fit h-git grid place-items-center p-1.5 hover:shadow-lg cursor-pointer hover:bg-red-700">
+                        <span class="material-symbols-outlined text-white hover:bg-red-700">favorite</span>
+                    </button>
+                    <div class="flex justify-between items-center">
+                        <div class="text-white font-bold">
+                            <p>ehfueihfu</p>
+                            <span class="material-symbols-outlined text-yellow-500">star</span>
+                            <span class="material-symbols-outlined text-yellow-500">star</span>
+                            <span class="material-symbols-outlined text-yellow-500">star</span>
+                            <span class="material-symbols-outlined">star</span>
+                        </div>
+                        <div>
+                            <a href="#"
+                                class="bg-white rounded-full w-fit h-git grid place-items p-1.5 shadow-lg cursor-pointer hover:bg-yellow-500 hover:-rotate-45 transition ease-in-out">
+                                <span class="material-symbols-outlined">arrow_forward</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <img src="https://picsum.photos/id/15/200/300" alt="photos picsum" class="rounded-lg">
+        </div>
+        <div class="relative">
+            <div
+                class="absolute w-full h-full rounded-lg text-bottom bg-gradient-to-b from-transparent from-60% to-neutral-900">
+                <div class="grid w-full h-full rounded-lg content-between p-2">
+                    <button
+                        class="place-self-end rounded-full w-fit h-git grid place-items-center p-1.5 hover:shadow-lg cursor-pointer hover:bg-red-700">
+                        <span class="material-symbols-outlined text-white hover:bg-red-700">favorite</span>
+                    </button>
+                    <div class="flex justify-between items-center">
+                        <div class="text-white font-bold">
+                            <p>ehfueihfu</p>
+                            <span class="material-symbols-outlined text-yellow-500">star</span>
+                            <span class="material-symbols-outlined text-yellow-500">star</span>
+                            <span class="material-symbols-outlined text-yellow-500">star</span>
+                            <span class="material-symbols-outlined">star</span>
+                        </div>
+                        <div>
+                            <a href="#"
+                                class="bg-white rounded-full w-fit h-git grid place-items p-1.5 shadow-lg cursor-pointer hover:bg-yellow-500 hover:-rotate-45 transition ease-in-out">
+                                <span class="material-symbols-outlined">arrow_forward</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <img src="https://picsum.photos/id/29/200/300" alt="photos picsum" class="rounded-lg">
+
+        </div>
+        <div class="relative">
+            <div
+                class="absolute w-full h-full rounded-lg text-bottom bg-gradient-to-b from-transparent from-60% to-neutral-900">
+                <div class="grid w-full h-full rounded-lg content-between p-2">
+                    <button
+                        class="place-self-end rounded-full w-fit h-git grid place-items-center p-1.5 hover:shadow-lg cursor-pointer hover:bg-red-700">
+                        <span class="material-symbols-outlined text-white hover:bg-red-700">favorite</span>
+                    </button>
+                    <div class="flex justify-between items-center">
+                        <div class="text-white font-bold">
+                            <p>ehfueihfu</p>
+                            <span class="material-symbols-outlined text-yellow-500">star</span>
+                            <span class="material-symbols-outlined text-yellow-500">star</span>
+                            <span class="material-symbols-outlined text-yellow-500">star</span>
+                            <span class="material-symbols-outlined">star</span>
+                        </div>
+                        <div>
+                            <a href="#"
+                                class="bg-white rounded-full w-fit h-git grid place-items p-1.5 shadow-lg cursor-pointer hover:bg-yellow-500 hover:-rotate-45 transition ease-in-out">
+                                <span class="material-symbols-outlined">arrow_forward</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <img src="https://picsum.photos/id/46/200/300" alt="photos picsum" class="rounded-lg">
+        </div>
+        <div class="relative">
+            <div
+                class="absolute w-full h-full rounded-lg text-bottom bg-gradient-to-b from-transparent from-60% to-neutral-900">
+                <div class="grid w-full h-full rounded-lg content-between p-2">
+                    <button
+                        class="place-self-end rounded-full w-fit h-git grid place-items-center p-1.5 hover:shadow-lg cursor-pointer hover:bg-red-700">
+                        <span class="material-symbols-outlined text-white hover:bg-red-700">favorite</span>
+                    </button>
+                    <div class="flex justify-between items-center">
+                        <div class="text-white font-bold">
+                            <p>ehfueihfu</p>
+                            <span class="material-symbols-outlined text-yellow-500">star</span>
+                            <span class="material-symbols-outlined text-yellow-500">star</span>
+                            <span class="material-symbols-outlined text-yellow-500">star</span>
+                            <span class="material-symbols-outlined">star</span>
+                        </div>
+                        <div>
+                            <a href="#"
+                                class="bg-white rounded-full w-fit h-git grid place-items p-1.5 shadow-lg cursor-pointer hover:bg-yellow-500 hover:-rotate-45 transition ease-in-out">
+                                <span class="material-symbols-outlined">arrow_forward</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <img src="https://picsum.photos/id/16/200/300" alt="photos picsum" class="rounded-lg">
+        </div>
     </div>
 </body>
+
 
 </html>
